--- a/app/src/main/res/layout/activity_prograss_task.xml
+++ b/app/src/main/res/layout/activity_prograss_task.xml
@@ -25,8 +25,14 @@
 
 
       <Spinner
+
           android:id="@+id/sboyid"
-          style="@style/inputlayoutstyle"/>
+          android:layout_marginRight="20dp"
+          android:layout_marginLeft="20dp"
+          android:layout_marginTop="10dp"
+          android:layout_width="match_parent"
+          android:layout_height="40dp"
+          style="@style/myspinner"/>
 
 
 
