--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -11,7 +11,7 @@
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:src="@drawable/greensignal"
+        android:src="@drawable/redsignal"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:contentDescription="@string/todo" />
