--- a/app/src/main/res/layout/activity_prograss_task.xml
+++ b/app/src/main/res/layout/activity_prograss_task.xml
@@ -10,18 +10,17 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/name"
-            style="@style/inputlayoutstyle">
-
-            <EditText
-                android:id="@+id/eitemdname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/enteritemname" />
 
 
-        </android.support.design.widget.TextInputLayout>
+        <Spinner
+
+            android:id="@+id/eitemdname"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            style="@style/myspinner"/>
 
 
       <Spinner
