--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,16 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="btnloginstyle1">
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@drawable/drawable</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
     <style name="btnloginstylerec">
         <item name="android:textSize">18sp</item>
         <item name="android:background">@drawable/edit</item>
