--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -6,14 +6,14 @@
 
     <ImageView
         android:id="@+id/progresstasksignal"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="@dimen/ten"
+        android:layout_marginBottom="@dimen/ten"
         android:layout_weight="1"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="@dimen/ten"
+        android:layout_marginRight="@dimen/ten"
         android:src="@drawable/redsignal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/forty"
         android:contentDescription="@string/todo" />
     <LinearLayout
         android:layout_weight="0.2"
@@ -22,8 +22,8 @@
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/listitem"
-            android:layout_marginTop="5dp"
-            android:textSize="18sp"
+            android:layout_marginTop="@dimen/five"
+            android:textSize="@dimen/textsize"
             android:layout_weight="1"
             android:text="@string/item_name"
             android:layout_width="match_parent"
@@ -31,8 +31,8 @@
             tools:ignore="NestedWeights" />
         <TextView
             android:id="@+id/listboy"
-            android:layout_marginBottom="5dp"
-            android:textSize="18sp"
+            android:layout_marginBottom="@dimen/five"
+            android:textSize="@dimen/textsize"
             android:layout_weight="1"
             android:text="@string/boy_name"
             android:layout_width="match_parent"
