--- a/app/src/main/res/drawable/drawable.xml
+++ b/app/src/main/res/drawable/drawable.xml
@@ -3,6 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <corners android:radius="50dp"/>
-    <stroke android:color="#1E88E5" android:width="2dp"/>
-<gradient android:startColor="#ffffff" android:endColor="#ffffff" android:centerColor="#ffffff" />
+    <stroke android:color="#6A1B9A" android:width="2dp"/>
+<gradient android:startColor="#ffffff" android:endColor="#ffffff" android:centerColor="#ff" />
 </shape>
