--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -6,7 +6,7 @@
     tools:context="app.nirmlkar.dalejan.bluedart.Confirm">
 
     <LinearLayout
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/fifty"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
@@ -82,7 +82,7 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="@dimen/sixty"
             android:layout_height="wrap_content">
             <Button
                 android:layout_weight="1"
