--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,18 +11,19 @@
 
         <ImageView
 
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/twenty"
+            android:layout_marginLeft="@dimen/forty"
             android:id="@+id/imge"
             android:src="@drawable/bluedart"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="@dimen/height"
             android:contentDescription="@string/todo" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_email"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/twenty"
+            android:layout_marginTop="@dimen/forty"
+            android:layout_marginRight="@dimen/twenty"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -39,9 +40,9 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_password"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginLeft="@dimen/twenty"
+            android:layout_marginRight="@dimen/twenty"
+            android:layout_marginTop="@dimen/top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -55,7 +56,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="@dimen/forty"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
