--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
     <include layout="@layout/content_main" />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/sixty"
+        android:layout_height="@dimen/sixty"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_menu_help" >
