--- a/app/src/main/res/drawable/edit.xml
+++ b/app/src/main/res/drawable/edit.xml
@@ -3,5 +3,5 @@
 android:layout_width="match_parent"
 android:layout_height="match_parent">
 <stroke android:color="#6A1B9A" android:width="1dp"/>
-<gradient android:startColor="#ffffff" android:endColor="#ffffff" android:centerColor="#ff" />
+<gradient android:startColor="#ffffff" android:endColor="#ffffff" android:centerColor="#ffffff" />
 </shape>
