--- a/app/src/main/res/layout/activity_prograss_task.xml
+++ b/app/src/main/res/layout/activity_prograss_task.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context="app.nirmlkar.dalejan.bluedart.PrograssTask">
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +21,8 @@
             android:layout_marginTop="@dimen/ten"
             android:layout_width="match_parent"
             android:layout_height="@dimen/forty"
-            style="@style/myspinner"/>
+         />
+
 
 
       <Spinner
@@ -31,7 +33,7 @@
           android:layout_marginTop="@dimen/ten"
           android:layout_width="match_parent"
           android:layout_height="@dimen/forty"
-          style="@style/myspinner"/>
+         />
 
 
 
