--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -2,16 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/btnloginstylerec"
+
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/progresstasksignal"
-        android:layout_marginTop="@dimen/ten"
-        android:layout_marginBottom="@dimen/ten"
+        android:layout_marginTop="@dimen/twelve"
+        android:layout_marginBottom="@dimen/twelve"
         android:layout_weight="1"
         android:layout_marginLeft="@dimen/ten"
         android:layout_marginRight="@dimen/ten"
-        android:src="@drawable/redsignal"
         android:layout_width="match_parent"
         android:layout_height="@dimen/forty"
         android:contentDescription="@string/todo" />
