--- a/app/src/main/res/layout/content_deliveryboy_screen.xml
+++ b/app/src/main/res/layout/content_deliveryboy_screen.xml
@@ -3,8 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:scrollbars="vertical"
     android:background="@color/background"
     android:layout_height="match_parent"
+
+    android:layout_marginBottom="@dimen/twenty"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="app.nirmlkar.dalejan.bluedart.DeliveryboyScreen"
     tools:showIn="@layout/activity_deliveryboy_screen">
