--- a/app/src/main/res/layout/activity_location_action.xml
+++ b/app/src/main/res/layout/activity_location_action.xml
@@ -5,4 +5,4 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="app.nirmlkar.dalejan.bluedart.LocationAction" />
+    tools:context="app.nirmlkar.dalejan.bluedart.activity.LocationAction" />
