--- a/app/src/main/res/layout/activity_add_delivery_boy.xml
+++ b/app/src/main/res/layout/activity_add_delivery_boy.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context="app.nirmlkar.dalejan.bluedart.AddDeliveryBoy">
+    tools:context="app.nirmlkar.dalejan.bluedart.activity.AddDeliveryBoy">
 
     <LinearLayout
         android:layout_marginTop="@dimen/fifty"
