--- a/app/src/main/res/layout/activity_deliveryboy_screen.xml
+++ b/app/src/main/res/layout/activity_deliveryboy_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context="app.nirmlkar.dalejan.bluedart.DeliveryboyScreen">
+    tools:context="app.nirmlkar.dalejan.bluedart.activity.DeliveryboyScreen">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
