--- a/app/src/main/res/layout/activity_prograss_task.xml
+++ b/app/src/main/res/layout/activity_prograss_task.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context="app.nirmlkar.dalejan.bluedart.PrograssTask">
+    tools:context="app.nirmlkar.dalejan.bluedart.activity.PrograssTask">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_marginTop="@dimen/forty"
