--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7B1FA2</color>
-    <color name="colorPrimaryDark">#4A148C</color>
-    <color name="colorAccent">#AB47BC</color>
-    <color name="background">#F3E5F5</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#D50000</color>
+    <color name="colorAccent">#D50000</color>
+    <color name="background">#ffffff</color>
+    <color name="white">#ffffff</color>
 </resources>
