--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="textsize">18sp</dimen>
     <dimen name="tsize">12sp</dimen>
     <dimen name="padd">5dip</dimen>
+    <dimen name="border">2dp</dimen>
 </resources>
